--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 
 		  <img src="жабы.png" alt="Avatar" width="200px" height="200px">
 		 <h1 >Anton Tagiev</h1>
+		<h2>Android junior dev</h2>
 		
-		<a href="tg://resolve?domain=disadisaaa" color: #FFFFFF>TELEGRAM</a>
+		<a href="tg://resolve?domain=atagievsuicidetoday" color: #FFFFFF>TELEGRAM</a>
 		<a href="//github.com/AntonTagievgrus" color: #FFFFFF >GitHub Public</a>
 		<a href="//vk.com/Antontagiev" color: #FFFFFF>VK</a>
 		<p  id="time" > </p>
